@startuml
[*] --> Enabled

state Enabled: enter: "EnterEnabled"
state Enabled: leave: "LeaveEnabled"
state Enabled {
    [*] -> Pending
    Pending -> Engaged: Down / "Down"
    Engaged -> Pending: Up / "Up"

    state Engaged: enter: "EnterEngaged"
    state Engaged: leave: "LeaveEngaged"
}

Enabled -> Disabled: TargetBecameDisabled
@enduml